# server-client-db

./: .gitignore  build.sh
include/: tls.hpp
postgres/: docker-compose.yml  gen.sh  init.sql
practice1_client/: CMakeLists.txt  README  main.cpp  mainwindow.cpp  mainwindow.hpp  mainwindow.ui  serverHandler.cpp  serverHandler.hpp
practice1_client/resources/: mainwindow.qrc
practice1_server/: CMakeLists.txt  clientHandler.cpp  clientHandler.hpp  dbAPI.cpp  dbAPI.hpp  gen.sh  hash.hpp  main.cpp  tls.hpp
